2006-11-15  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/__init__.py: Do not rebind sys.path, restore the old one.
	Thanks to Jp Calderone for pointing out.

2006-10-13  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtktextview.override
	(pygtk_text_buffer_register_serialize_format_cb): set return
	value to NULL in the error codepath.

2006-10-13  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am (HTMLFILES): Remove
	html/pygtk-reference-copyright.html. Fixes #361906 (Marc-Andre Lureau)

2006-10-05  Cedric Gustin  <cedric.gustin@gmail.com>

	* setup.py: Initialize Templates and TemplateExtensions with
	py_ssize_t_clean=True (required by codegen.SourceWriter).

2006-10-03  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* configure.in: Bump version.

=== 2.10.3 ===
2006-10-03  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* NEWS: Update.

	* Makefile.am:
	* atk.override:
	* atkrectangle.override:
	* codegen/argtypes.py:
	* codegen/codegen.py:
	* gtk/Makefile.am:
	* gtk/gdk.override:
	* gtk/gdkdraw.override:
	* gtk/gdkpixbuf.override:
	* gtk/gdkrectangle.override:
	* gtk/gtk-types.c: (pygtk_style_helper_getitem),
	(pygtk_style_helper_setitem), (pygtk_tree_model_row_getitem),
	(pygtk_tree_model_row_setitem):
	* gtk/gtk.override:
	* gtk/gtkcontainer.override:
	* gtk/gtktextview.override:
	* gtk/gtktreeview.override:
	* pango.override:

	Support Python 2.5 + 64-bit architectures (#337368).

2006-10-03  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gtk/gtktreeview.override (pygtk_tree_sortable_sort_cb): Fix a
	refcount problem accidentally introduced by me between 2.10.1 and
	2.10.2 :P

2006-10-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Post-release version bump.

=== 2.10.2 ===
2006-10-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

	* tests/test_treeview.py: Add unit test for bug #347273.

2006-09-21  Cedric Gustin  <cedric.gustin@gmail.com>

	* pygtk_postinstall.py: Adapt the codegendir variable to the user