@@ -1,3 +1,9 @@
+2006-11-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* examples/Makefile.am (demo_PYTHON),
+	* examples/pygtk-demo/demos/statusicon.py: Add a gtk.StatusIcon
+	example by Nikos Kouremenos.
+
 2006-11-15  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/__init__.py: Do not rebind sys.path, restore the old one.
